--- a/src/app/chef/chef-dashboard/chef-dashboard-component/chef-dashboard-component.html
+++ b/src/app/chef/chef-dashboard/chef-dashboard-component/chef-dashboard-component.html
@@ -60,12 +60,18 @@
             >
               Edit Restaurant
             </button>
+
+             <!-- export orders report -->
+            <app-chef-order-report></app-chef-order-report>
+
             <button
               (click)="deleteRestaurant(restaurant.id)"
               class="px-4 py-2 bg-red-500 text-white rounded-lg hover:bg-red-600 transition-colors duration-200"
             >
               🗑️
             </button>
+
+
           </div>
         </div>
 
